--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
+        "@material-ui/icons": "^4.11.2",
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "i": "^0.3.6",
         "node-sass": "^4.12.0",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
