--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "roma-react",
+    "proxy":"https://localhost:5001",
     "version": "6.0.0",
     "homepage": ".",
     "private": true,
@@ -8,18 +9,22 @@
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
+        "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
         "i": "^0.3.6",
+        "json-server": "^0.16.3",
         "node-sass": "^4.12.0",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
         "primereact": "6.1.0",
         "prismjs": "^1.15.0",
         "quill": "1.3.7",
+        "ra-data-simple-rest": "^3.17.1",
         "react": "^17.0.1",
+        "react-admin": "^3.17.1",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
@@ -27,6 +32,7 @@
         "react-transition-group": "^4.4.1"
     },
     "scripts": {
+        "server": "json-server --watch db.json --port 5000",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
